--- a/src/components/Events/Events.css
+++ b/src/components/Events/Events.css
@@ -2,3 +2,8 @@
     font-size: 16px;
     vertical-align: middle;
   }
+@media (max-width:768px) {
+    .containers{
+        text-align: center;
+    }
+}
