--- a/src/components/Games/Games.css
+++ b/src/components/Games/Games.css
@@ -1,8 +1,5 @@
-*{
-    max-width: 100%;
-}
 .whole-section{
-    max-width: 100vw;
+    max-width: 98vw;
     padding-bottom: 1rem;
     padding-top: 1rem;
     padding-right: 1rem;
@@ -41,6 +38,9 @@
     bottom: 6rem;
     left: -4rem;
     transform: rotate(270deg);
+}
+.main-game{
+    max-width: 95vw;
 }
 @media (min-width:768px) {
     .image1{
