--- a/src/components/Downloads/Downloads.css
+++ b/src/components/Downloads/Downloads.css
@@ -39,3 +39,10 @@
     color: black;
     cursor: pointer;
 }
+.QR{
+    max-width: 10vw;
+}
+.spacing{
+    gap: 12rem;
+    align-items: center;
+}
