--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,15 @@
 
 .wholes{
     position: relative;
+    height: 100vh;
     z-index: 100;
     width: 100vw;
     overflow: hidden;
+}
+.foot{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
