--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
 .wholes{
     position: relative;
     height: 100vh;
-    z-index: 100;
+    z-index: 1000000;
     width: 100vw;
     overflow: hidden;
 }
