--- a/src/components/AboutPage/AboutPage.css
+++ b/src/components/AboutPage/AboutPage.css
@@ -6,6 +6,8 @@
     width: 100vw;
     height: 80vh;
     color: white;
+    position: relative;
+    z-index: 1000;
 }
 @media (max-width:768px) {
     
