--- a/src/components/Downloads/Downloads.css
+++ b/src/components/Downloads/Downloads.css
@@ -26,7 +26,7 @@
 .text-edit{
     margin-top: 3rem;
 }
-.button-edit{
+.button-edits{
     display: flex;
     width: fit-content;
     background: #F59431;
@@ -35,7 +35,7 @@
     align-items: center;
     padding: 0.3rem;
 }
-.button-edit:hover{
+.button-edits:hover{
     color: black;
     cursor: pointer;
 }
