--- a/src/components/EventsPage/EventsPage.css
+++ b/src/components/EventsPage/EventsPage.css
@@ -2,6 +2,8 @@
     background-image: url('../../assets/EventsPage_assets/frontPage.png');
     width: 100vw;
     height: 80vh;
+    position: relative;
+    z-index: 100;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
