--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -9,12 +9,14 @@
     height: 60vh;
     object-fit:fill;
     position: relative;
+    z-index: 100;
     top: 5rem;
     left: 6rem;
 }
 .img2{
     width: 20vw;
     position: relative;
+    z-index: 100;
     top: -3rem;
     left: 15rem;
 }
