--- a/src/components/ServicesPage/ServicesPage.css
+++ b/src/components/ServicesPage/ServicesPage.css
@@ -3,6 +3,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    position: relative;
+    z-index: 1000;
     width: 100vw;
     height: 60vh;
 }
