--- a/src/output.css
+++ b/src/output.css
@@ -626,10 +626,6 @@ video {
   z-index: 10;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .m-\[3rem\] {
   margin: 3rem;
 }
@@ -714,12 +710,12 @@ video {
   margin-top: 1rem;
 }
 
-.mt-\[2rem\] {
-  margin-top: 2rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
-.block {
-  display: block;
+.mt-\[2rem\] {
+  margin-top: 2rem;
 }
 
 .inline-block {
@@ -748,10 +744,6 @@ video {
 
 .h-52 {
   height: 13rem;
-}
-
-.h-\[10vh\] {
-  height: 10vh;
 }
 
 .h-\[12rem\] {
@@ -792,10 +784,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.min-h-screen {
-  min-height: 100vh;
 }
 
 .w-10 {
@@ -862,16 +850,16 @@ video {
   width: 6vw;
 }
 
-.w-\[70vw\] {
-  width: 70vw;
-}
-
 .w-\[80vw\] {
   width: 80vw;
 }
 
 .w-\[90vw\] {
   width: 90vw;
+}
+
+.w-\[95vw\] {
+  width: 95vw;
 }
 
 .w-fit {
@@ -887,20 +875,12 @@ video {
   width: 100vw;
 }
 
-.w-\[50vw\] {
-  width: 50vw;
-}
-
-.w-\[53vw\] {
-  width: 53vw;
-}
-
-.w-\[52vw\] {
-  width: 52vw;
-}
-
 .max-w-2xl {
   max-width: 42rem;
+}
+
+.max-w-4xl {
+  max-width: 56rem;
 }
 
 .max-w-7xl {
@@ -943,6 +923,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .grid-cols-1 {
@@ -1057,6 +1041,12 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1075,6 +1065,10 @@ video {
 
 .overflow-y-visible {
   overflow-y: visible;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-full {
@@ -1152,10 +1146,6 @@ video {
 .bg-\[\#F59431\] {
   --tw-bg-opacity: 1;
   background-color: rgb(245 148 49 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[rgba\(28\2c 102\2c 138\2c 0\.2\)\] {
-  background-color: rgba(28,102,138,0.2);
 }
 
 .bg-black {
@@ -1325,6 +1315,14 @@ video {
   padding-bottom: 3rem;
 }
 
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pt-\[2rem\] {
+  padding-top: 2rem;
+}
+
 .pt-\[4rem\] {
   padding-top: 4rem;
 }
@@ -1400,6 +1398,10 @@ video {
 
 .italic {
   font-style: italic;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
 }
 
 .leading-tight {
@@ -1484,6 +1486,16 @@ video {
 .text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity, 1));
+}
+
+.text-orange-500 {
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity, 1));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
 .text-white {
@@ -1607,6 +1619,11 @@ video {
   --tw-scale-x: 105%;
   --tw-scale-y: 105%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-gray-100:hover {
@@ -1739,10 +1756,6 @@ video {
   .md\:translate-y-\[4vw\] {
     --tw-translate-y: 4vw;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
