--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,10 @@
 
 .wholes{
+    background: radial-gradient(
+      143.25% 143.25% at 49.05% 37.21%,
+      #1C66EE 0%,
+      #103A88 100%
+    );
     position: relative;
     height: 100vh;
     z-index: 1000000;
