--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,7 +1,3 @@
-.Home-Page{
-    position: relative;
-    z-index: 1000000000;
-}
 .backGround-Pics{
     background-image: url("../../assets/Home_assets/bg.png");
     background-size: cover;
@@ -26,7 +22,7 @@
     padding-left: 5vw;
     padding-right: 5vw;
     position: relative;
-    z-index: 100;
+    z-index: 1000;
     top: 6vh;
     color: white;
     border-radius: 1rem;
@@ -49,15 +45,9 @@
     width: 50vw;
     flex-direction: column;
     gap: 0.5rem;
-    position: relative;
-    z-index: 100;
+    top: 23vh;
     padding-left: 4vw;
     padding-bottom: 12vw;
-}
-.main-section{
-    position: relative;
-    z-index: 100;
-    top: 5vw;
 }
 .button-edit{
     background-color: white;
