--- a/src/components/AboutOne7/AboutOne7.css
+++ b/src/components/AboutOne7/AboutOne7.css
@@ -1,5 +1,9 @@
 .section{
-    background: radial-gradient(circle, #4f46e5, #7c3aed);
+    background: radial-gradient(
+    143.25% 143.25% at 49.05% 37.21%,
+    #1C66EE 0%,
+    #103A88 100%
+  );
     position: relative;
     z-index: 100;
     margin-left: auto;
