--- a/src/components/ServicesPage/ServicesPage.css
+++ b/src/components/ServicesPage/ServicesPage.css
@@ -1,5 +1,6 @@
 .backG{
     background-image: url(../../assets/ServicesPage_assets/backG.png);
+    filter: brightness(50%);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
