--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -1,11 +1,20 @@
 /* Stats.css */
 .stats-container {
-    max-width: 80%;
+    max-width: 100%;
     margin: auto;
+    background-image: url("../../assets/EventsPage_assets/frontPage.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: 0;
+    filter: brightness(60%);
   }
   
   .stat-item {
     transition: transform 0.3s ease-in-out;
+    width: 24vw;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
   }
   
   .stat-item:hover {
