--- a/src/output.css
+++ b/src/output.css
@@ -618,6 +618,14 @@ video {
   top: 18rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.top-16 {
+  top: 4rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -638,12 +646,28 @@ video {
   z-index: 500;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
 .m-\[3rem\] {
   margin: 3rem;
 }
 
 .m-auto {
   margin: auto;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .mx-4 {
@@ -664,6 +688,21 @@ video {
 .my-\[3rem\] {
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+.my-\[2rem\] {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.my-\[5vh\] {
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
+
+.my-\[10vh\] {
+  margin-top: 10vh;
+  margin-bottom: 10vh;
 }
 
 .mb-1 {
@@ -726,12 +765,20 @@ video {
   margin-top: 2rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .inline-block {
   display: inline-block;
 }
 
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
 }
 
 .grid {
@@ -794,6 +841,23 @@ video {
   height: 100vh;
 }
 
+.h-40 {
+  height: 10rem;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -842,10 +906,6 @@ video {
   width: 30vw;
 }
 
-.w-\[3rem\] {
-  width: 3rem;
-}
-
 .w-\[60vw\] {
   width: 60vw;
 }
@@ -879,8 +939,12 @@ video {
   width: 100vw;
 }
 
-.w-\[10vw\] {
-  width: 10vw;
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .max-w-2xl {
@@ -897,10 +961,6 @@ video {
 
 .max-w-\[100vw\] {
   max-width: 100vw;
-}
-
-.max-w-\[90vw\] {
-  max-width: 90vw;
 }
 
 .max-w-\[50vw\] {
@@ -1217,16 +1277,17 @@ video {
   background-color: rgb(255 255 255 / 0.5);
 }
 
-.bg-\[\] {
-  background-color: ;
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
 
-.bg-\[url\(\'\$\{sports\.image\}\'\)\] {
-  background-image: url('${sports.image}');
+.bg-opacity-90 {
+  --tw-bg-opacity: 0.9;
 }
 
 .bg-cover {
@@ -1274,8 +1335,8 @@ video {
   padding: 2rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
+.p-\[10vh\] {
+  padding: 10vh;
 }
 
 .px-4 {
@@ -1341,6 +1402,11 @@ video {
 .py-\[3rem\] {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-\[3rem\] {
@@ -1412,6 +1478,21 @@ video {
   line-height: 1rem;
 }
 
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1438,6 +1519,10 @@ video {
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.leading-snug {
+  line-height: 1.375;
 }
 
 .text-\[\#103A88\] {
@@ -1688,6 +1773,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-red-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
@@ -1731,6 +1821,10 @@ video {
     width: 40vw;
   }
 
+  .sm\:w-\[45\%\] {
+    width: 45%;
+  }
+
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1758,8 +1852,16 @@ video {
     grid-column: span 2 / span 2;
   }
 
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
   }
 
   .md\:h-64 {
@@ -1778,6 +1880,10 @@ video {
     width: 16rem;
   }
 
+  .md\:w-\[10vw\] {
+    width: 10vw;
+  }
+
   .md\:w-\[20vw\] {
     width: 20vw;
   }
@@ -1790,16 +1896,20 @@ video {
     width: 3vw;
   }
 
-  .md\:w-\[10vw\] {
-    width: 10vw;
+  .md\:w-\[40vw\] {
+    width: 40vw;
   }
 
   .md\:w-\[45vw\] {
     width: 45vw;
   }
 
-  .md\:w-\[40vw\] {
-    width: 40vw;
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .md\:w-\[30\%\] {
+    width: 30%;
   }
 
   .md\:max-w-\[10vw\] {
@@ -2004,6 +2114,14 @@ video {
     width: 8vw;
   }
 
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
+  .lg\:w-\[20\%\] {
+    width: 20%;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -2064,5 +2182,12 @@ video {
 
   .lg\:font-semibold {
     font-weight: 600;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:translate-y-\[4vw\] {
+    --tw-translate-y: 4vw;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 }
